--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello,CSP World!</h1>
     <p>Welcome to my web app!</p>
     <a href="{{ url_for('page_two') }}">
         <button>Go to Another Page</button>
