--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hello,CSP World!</h1>
-    <p>Welcome to my web app!</p>
+    <p>Welcome CSP to my web app!</p>
     <a href="{{ url_for('page_two') }}">
         <button>Go to Another Page</button>
     </a>
